--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     {
       "src": "/api/(.*)",
       "dest": "src/server/index.ts"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "src/server/index.ts"
     }
   ]
 } 
