--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,8 @@
       "src": "/api/(.*)",
       "dest": "src/server/index.ts"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 } 
