--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/server/index.ts",
+      "src": "src/server/api.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/server/index.ts"
+      "dest": "src/server/api.js"
     }
   ],
   "env": {
