--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
   "version": 2,
-  "functions": {
-    "api/*.js": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  }
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api/$1" }]
 } 
