--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
+    "@types/pdfmake": "^0.2.11",
+    "@types/qrcode": "^1.5.5",
     "@wagmi/core": "^2.16.7",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -53,12 +56,16 @@
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
     "input-otp": "^1.2.4",
+    "ipfs-http-client": "^60.0.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "pdfmake": "^0.2.18",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
@@ -69,6 +76,7 @@
     "vaul": "^0.9.3",
     "viem": "^2.25.0",
     "wagmi": "^2.14.16",
+    "web3.storage": "^4.5.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
