--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
@@ -44,6 +45,9 @@
     "@types/pdfmake": "^0.2.11",
     "@types/qrcode": "^1.5.5",
     "@wagmi/core": "^2.16.7",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
+    "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -55,8 +59,11 @@
     "ethers": "^5.8.0",
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "^1.2.4",
     "ipfs-http-client": "^60.0.1",
+    "js-sha256": "^0.11.0",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "pdfmake": "^0.2.18",
